--- a/style.css
+++ b/style.css
@@ -51,6 +51,13 @@ h1 {
   font-size: 35px;
   font-weight: 300;
 }
+h5 {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 350;
+  margin-top: -10px;
+  margin-bottom: -10px;
+}
 h2 {
   font-size: 30px;
   font-weight: 300;
@@ -411,6 +418,13 @@ p code {
  color: #424242;
   background-color: darksalmon;
 
+}
+
+
+.publication-awards {
+  color: #ff3860;
+  /* width: fit-content; */
+  font-weight: bolder;
 }
 
 
