--- a/style.css
+++ b/style.css
@@ -304,6 +304,14 @@ p code {
 }
 
 
+.body-text {
+  float: right;
+  font-size: 18px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .intro-text {
   float: right;
   font-size: 18px;
